--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -51,7 +53,27 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
     def lifecycle_version = "2.5.1"
     def arch_version = "2.1.0"
-
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation("io.coil-kt:coil:2.4.0")
+    implementation 'com.airbnb.android:lottie:6.0.0'
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+    def room_version = "2.5.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt "androidx.room:room-compiler:$room_version"
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
