--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.3.1'
     implementation("io.coil-kt:coil:2.4.0")
     implementation 'com.airbnb.android:lottie:6.0.0'
+    implementation 'androidx.room:room-ktx:2.5.1'
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
